[gd_scene load_steps=4 format=3 uid="uid://cor4iaspwegan"]

[ext_resource type="Script" path="res://game.gd" id="1_fkoin"]
[ext_resource type="PackedScene" uid="uid://biim2lxri0akl" path="res://field/field.tscn" id="1_lw2ik"]
[ext_resource type="Texture2D" uid="uid://cn1lvbasvur3q" path="res://asset/background.jpg" id="2_nxbvb"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fkoin")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nxbvb")

[node name="PlayerBoxColor" type="Control" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = -29.0
offset_right = 323.0
offset_bottom = 5.0
grow_vertical = 2

[node name="Color" type="ColorRect" parent="PlayerBoxColor"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.328952, 0.144451, 0.190881, 1)

[node name="PlayerContainer" type="HBoxContainer" parent="PlayerBoxColor"]
layout_mode = 2
offset_right = 274.0
offset_bottom = 23.0

[node name="PlayerNameContainer" type="VBoxContainer" parent="PlayerBoxColor/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Joueur" type="Label" parent="PlayerBoxColor/PlayerContainer/PlayerNameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
text = "Joueur "

[node name="PlayerColorContainer" type="VBoxContainer" parent="PlayerBoxColor/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Couleur" type="Label" parent="PlayerBoxColor/PlayerContainer/PlayerColorContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
text = "Carte"

[node name="PlayerScoreContainer" type="VBoxContainer" parent="PlayerBoxColor/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Score" type="Label" parent="PlayerBoxColor/PlayerContainer/PlayerScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
text = "Score "

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Field" parent="CanvasLayer" instance=ExtResource("1_lw2ik")]
offset_left = 100.55
offset_top = 96.725
offset_right = 101.79
offset_bottom = 96.7251

[node name="CollisionShape2D" parent="CanvasLayer/Field/CardDropAreaRight" index="0"]
position = Vector2(79.45, 73.275)

[node name="CollisionShape2D" parent="CanvasLayer/Field/CardDropAreaLeft" index="0"]
position = Vector2(110.45, 73.275)

[node name="CardPos" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnMenu" type="Button" parent="."]
z_index = 4
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -52.0
offset_right = -24.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
text = "Retour au menu"

[node name="ValidateCardPos" type="Button" parent="."]
z_index = 4
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -13.0
offset_right = -47.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
text = "Valider
"

[node name="Label" type="Label" parent="."]
z_index = 4
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = 21.0
offset_right = 15.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 25
text = "test"

[node name="Color" type="ColorRect" parent="Label"]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = 2.0
offset_right = 13.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.328952, 0.144451, 0.190881, 1)

[node name="PlayZone" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -532.0
offset_top = -159.0
offset_right = 386.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="PlayZone"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.046
anchor_top = -4.569
anchor_right = 1.205
anchor_bottom = 1.46
offset_left = 42.228
offset_top = 484.314
offset_right = -188.19
offset_bottom = -48.7599

[node name="Polygon2D" type="Polygon2D" parent="PlayZone"]
position = Vector2(25.3961, 133.34)
scale = Vector2(1.00973, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-25.1513, -17.3395, 883.849, -17.3395, 883.849, -23.3395, 899.844, -14.3395, 883.849, -4.33954, 883.849, -11.3395, -25.1513, -11.3395)

[connection signal="pressed" from="ReturnMenu" to="." method="_on_return_menu_pressed"]
[connection signal="pressed" from="ValidateCardPos" to="." method="_on_validate_card_pos_pressed"]

[editable path="CanvasLayer/Field"]
